--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "build": "tsc",
     "dev": "pnpm run build && node ./dist/index.js",
-    "start": "pnpm run build && node ./dist/index.js"
+    "start": "node ./dist/index.js",
+    "lint": "turbo run lint",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "check-types": "turbo run check-types"
   },
   "devDependencies": {
     "@repo/backend-common": "workspace:*",
