--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "pnpm run build && node ./dist/index.js",
-    "start": "pnpm run build && node ./dist/index.js"
+    "start": "node ./dist/index.js"
   },
   "devDependencies": {
     "@repo/backend-common": "workspace:*",
