--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "dev": "pnpm run build && node ./dist/index.js",
     "start": "node ./dist/index.js",
-    "postinstall": "prisma generate"
+    "prisma:generate": "prisma generate --schema=./prisma/schema.prisma"
   },
   "devDependencies": {
     "@repo/backend-common": "workspace:*",
