--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -7,7 +7,8 @@
     "./prisma": "./src/index.ts"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prisma:generate": "prisma generate",
+    "postinstall": "prisma generate"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
