--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -8,6 +8,9 @@
     "dev": "pnpm run build && node ./dist/index.js",
     "start": "node ./dist/index.js"
   },
+  "engines": {
+    "node": ">=18.x"
+  },
   "devDependencies": {
     "@repo/backend-common": "workspace:*",
     "@repo/db": "workspace:*",
