--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -15,7 +15,8 @@
     "@repo/backend-common": "workspace:*",
     "@repo/db": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/cors": "^2.8.19"
+    "@types/cors": "^2.8.19",
+    "@types/node": "^22.15.3"
   },
   "keywords": [],
   "author": "",
