fixed: Update package.json and tsconfig.json

--- a/apps/http-backend/vercel.json
+++ b/apps/http-backend/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "buildCommand": "pnpm build", 
   "builds": [
     {
       "src": "dist/index.js",
@@ -11,6 +12,5 @@
       "src": "/(.*)",
       "dest": "dist/index.js"
     }
-  ],
-  "buildCommand": "pnpm build"
+  ]
 }
