--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -b",
     "dev": "pnpm run build && node ./dist/index.js",
     "start": "node ./dist/index.js"
   },
