--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -7,8 +7,9 @@
     "./prisma": "./src/index.ts"
   },
   "scripts": {
-    "prisma:generate": "prisma generate",
-    "postinstall": "prisma generate"
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev --skip-generate",
+    "db:deploy": "prisma migrate deploy"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
