--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate --schema=./packages/db/prisma/schema.prisma"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
